# ros2_basic

./: .620e6de936363ea073b30f8d6d082d492613a07a.cam  .gitignore
src/: Final.md  Notas.md  Notas_Point_cloud_pcl.md  Notas_ros2_TF_URDF_RViz_Gazabo.md  Notas_ros2_basic.md
src/batery_led_interfaces/: CMakeLists.txt  package.xml
src/batery_led_interfaces/msg/: LedPanelState.msg
src/batery_led_interfaces/srv/: SetLed.srv
src/battery_led_pkg/: CMakeLists.txt  package.xml
src/battery_led_pkg/src/: battery_node_led.cpp  led_node_panel.cpp
src/battery_led_pkg/yaml_params/: leds_params.yaml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  my_first_node_oop.cpp  robot_news_station.cpp  smartphone.cpp
src/my_first_activity_cpp_pkg/: CMakeLists.txt  package.xml
src/my_first_activity_cpp_pkg/src/: number_counter.cpp  number_publisher.cpp
src/my_first_activity_py_pkg/: package.xml  setup.cfg  setup.py
src/my_first_activity_py_pkg/my_first_activity_py_pkg/: number_counter.py  number_publisher.py
src/my_py_pkg/: package.xml  setup.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/point_cloud_processing/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/: README.md  package.xml  setup.py
turtle_reto/: ESTRUCTURA_ARCHIVOS.md  INICIO_RAPIDO.md  PROYECTO_COMPLETADO.txt  PROYECTO_RESUMEN.md  run_turtlesim_project.sh  test_project.sh
(+41 files in other folders)
